--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "install": "^0.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
